--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#rightBar {
+  position: fixed;
+  background: #ccc;
+  height: 1024px;
+  width: 30%;
+  right: 0px;
+}
+
+#leftBar {
+  float: left;
+  left: 0;
+  width: 70%;
+  height: 100px;
+}
