--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -1,2 +1,19 @@
-<h1>Home#timeline</h1>
-<p>Find me in app/views/home/timeline.html.erb</p>
+<div id="leftBar">
+  
+</div>
+
+<div id="rightBar">
+  <div class="year">
+    2011
+  </div>
+  <div class="year">
+    2012
+  </div>
+  <div class="year">
+    2013
+  </div>
+</div>
+
+<div id="clearFix" style="clear: both; height: 30px;" >
+</div>
+<%= javascript_include_tag :timeline %>
