--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,3 +1,4 @@
-<h1>Home#login</h1>
-<p>Find me in app/views/home/login.html.erb</p>
-<%= link_to 'login', '/auth/facebook' %>
+<div id="login-part">
+  <h1>COOKPAD</h1>
+  <%= link_to 'login', '/auth/facebook' %>
+</div>
