--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,4 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: black;
+}
 
+#login-part {
+  width: 500px;
+  margin: auto;
+  text-align: center;
+}
