--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -1,19 +1,4 @@
-<div id="leftBar">
-  
-</div>
+<div id="leftBar"></div>
+<div id="rightBar"></div>
 
-<div id="rightBar">
-  <div class="year">
-    2011
-  </div>
-  <div class="year">
-    2012
-  </div>
-  <div class="year">
-    2013
-  </div>
-</div>
-
-<div id="clearFix" style="clear: both; height: 30px;" >
-</div>
 <%= javascript_include_tag :timeline %>
