--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -15,3 +15,13 @@
   width: 70%;
   height: 100px;
 }
+
+div#current_year.year {
+  font-size: 30px;   
+  color: #f00;
+  background-color: #000;
+}
+
+body {
+  overflow:hidden;  
+}
