--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,4 +1,5 @@
 <div id="login-part">
-  <h1>COOKPAD</h1>
+  <h1>COOKPAD 24</h1>
   <%= link_to 'login', '/auth/facebook' %>
+  <%= image_tag "key.png", id: "key-icon" %>
 </div>
