fix some bugs, add year range, add caption display

--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -1,4 +1,7 @@
 <div id="leftBar"></div>
-<div id="rightBar"></div>
+<div id="rightBar">
+  <div id="year"></div>
+  <div id="caption"></div>
+</div>
 
 <%= javascript_include_tag :timeline %>
