--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -2,6 +2,7 @@
 <div id="rightBar">
   <div id="year"></div>
   <div id="caption"></div>
+  <div id="clock"></div>
 </div>
 
 <%= javascript_include_tag :timeline %>
