add login page design

--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,5 +1,6 @@
-<div id="login-part">
-  <h1>COOKPAD 24</h1>
-  <%= link_to 'login', '/auth/facebook' %>
-  <%= image_tag "key.png", id: "key-icon" %>
+<%= javascript_include_tag :jquery_easing %>
+<div class="eff">
+  <%= image_tag "memories.jpeg", width:640, height:480, id: "key-icon" %>
+  <div class="caption"><a href="/auth/facebook" class="header">Login</a><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p></div>
 </div>
+
