--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -36,3 +36,49 @@ div#current_year.year {
   color: #f00;
   background-color: #000;
 }
+
+.eff {
+  width:650px;
+  height:490px;
+  position:relative;  
+  overflow:hidden;
+  float:left;
+  display:inline;
+  margin:8px;
+  font-size:12px;
+}
+
+.eff img {
+  display:block;
+  width:640px;
+  height:480px;
+  text-decoration:none;
+  border:4px solid #ccc;
+  background:#ddd;
+  position:absolute;
+  z-index:500;
+  cursor:pointer; cursor:hand;
+}
+
+.eff .caption {
+  width:640px;
+  height:480px;
+  background:#333;
+  border:4px solid #ccc;
+  color:#eee;
+  position:absolute;
+  top:0; left:0;
+  z-index:0;
+}
+
+.eff .caption a.header {
+  margin:10px 5px 5px 5px;
+  display:block;
+  font-size:14px; 
+  font-weight:700;
+  color:#4ed7f4;
+}
+
+.eff .caption p {
+  margin:5px; 
+}
