--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -3,6 +3,9 @@
   <div id="year"></div>
   <div id="caption"></div>
   <div id="clock"></div>
+  <audio controls>
+    <source src="./song.mp3" type="audio/mpeg">
+  </audio>
 </div>
 
 <%= javascript_include_tag :timeline %>
