--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -10,17 +10,17 @@ html, body {
   overflow: hidden;
 }
 
-#login-part {
-  width: 500px;
-  margin: auto;
-  text-align: center;
+.login-part {
+  width: 650px;
+  margin: 100px auto;
 }
 
 #rightBar {
   position: fixed;
   background: #ccc;
   height: 1024px;
-  width: 30%;
+  width: 25%;
+  padding: 40px;
   right: 0px;
 }
 
@@ -34,13 +34,20 @@ html, body {
 div#current_year.year {
   font-size: 30px;
   color: #f00;
-  background-color: #000;
+}
+
+#year {
+  height: 450px;
+}
+
+.year {
+  height: 40px;
 }
 
 .eff {
-  width:650px;
+  width:100%;
   height:490px;
-  position:relative;  
+  position:relative;
   overflow:hidden;
   float:left;
   display:inline;
@@ -48,9 +55,8 @@ div#current_year.year {
   font-size:12px;
 }
 
-.eff img {
+#key-icon {
   display:block;
-  width:640px;
   height:480px;
   text-decoration:none;
   border:4px solid #ccc;
@@ -63,22 +69,31 @@ div#current_year.year {
 .eff .caption {
   width:640px;
   height:480px;
-  background:#333;
+  background: white;
   border:4px solid #ccc;
   color:#eee;
+  text-align: center;
+  padding-top: 50px;
   position:absolute;
   top:0; left:0;
   z-index:0;
 }
 
 .eff .caption a.header {
-  margin:10px 5px 5px 5px;
+  margin: auto;
+  width: 300px;
   display:block;
-  font-size:14px; 
+  font-size:14px;
   font-weight:700;
   color:#4ed7f4;
+  margin-bottom: 50px;
 }
 
 .eff .caption p {
-  margin:5px; 
+  margin:5px;
+}
+
+.content {
+  font-size: 30px;
+  color: #003333;
 }
