--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,6 +1,10 @@
 <%= javascript_include_tag :jquery_easing %>
-<div class="eff">
-  <%= image_tag "memories.jpeg", width:640, height:480, id: "key-icon" %>
-  <div class="caption"><a href="/auth/facebook" class="header">Login</a><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p></div>
+<div class="login-part">
+  <div class="eff">
+    <%= image_tag "memories.jpeg", width:640, height:480, id: "key-icon" %>
+    <div class="caption">
+      <%= link_to image_tag("login-icon.png"), "/auth/facebook", class: "header" %>
+      <p class="content">AAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAA</p>
+    </div>
+  </div>
 </div>
-
