--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -1,11 +1,15 @@
 <div id="leftBar"></div>
 <div id="rightBar">
   <div id="year"></div>
-  <div id="caption"></div>
-  <div id="clock"></div>
-  <audio controls>
-    <source src="./song.mp3" type="audio/mpeg">
-  </audio>
+  <div id="caption-outer">
+    <p id="caption"></p>
+  </div>
+  <div id="media-part">
+    <div id="clock"></div>
+    <audio controls>
+      <source src="./song.mp3" type="audio/mpeg">
+    </audio>
+  </div>
 </div>
 
 <%= javascript_include_tag :timeline %>
