--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div id="media-part">
     <div id="clock"></div>
-    <audio autoplay="autoplay" >
+    <audio autoplay="autoplay" controls>
       <source src=<%= "/song.mp3"%> type="audio/mpeg">
     </audio>
   <div id="map-canvas"></div>
