--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -64,11 +64,14 @@ audio {
 
 div#current_year.year {
   font-size: 30px;
-  color: #f00;
+  color: #2F4F4F;
 }
 
 #year {
-  height: 450px;
+  height: 350px;
+  font: normal 15px 'Frutiger Neue W02 Book',Arial,sans-serif;
+  font-size: 20px;
+  color: #778899;
 }
 
 .year {
