--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -8,3 +8,16 @@
     </div>
   </div>
 </div>
+<div id="footter">
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=589820887715988";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+  <div class="fb-like" data-href="http://secret-forest-8422.herokuapp.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-text="check out facebook photos frame app" data-via="dxhuy" data-lang="ja">ツイート</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</div>
