--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -4,7 +4,10 @@
     <%= image_tag "memories.jpeg", width:640, height:480, id: "key-icon" %>
     <div class="caption">
       <%= link_to image_tag("login-icon.png"), "/auth/facebook", class: "header" %>
-      <p class="content">AAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAA</p>
+      <p class="content">
+        このフェースブックフォトフレームアプリは、昔からのフォトを優先に表示し、
+        個人個人の記憶や思い出を思い出すようにする
+      </p>
     </div>
   </div>
 </div>
