--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -5,8 +5,7 @@
     <p id="caption"></p>
   </div>
   <div id="media-part">
-    <div id="clock"></div>
-    <audio autoplay="autoplay" controls autoplay loop class="hidden">
+    <audio autoplay="autoplay" controls autoplay loop>
       <source src=<%= "/song.mp3"%> type="audio/mpeg">
     </audio>
   <div id="map-canvas"></div>
