--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -69,6 +69,7 @@ audio {
 div#current_year.year {
   font-size: 30px;
   color: #2F4F4F;
+  border-left: 5px solid #4169E1;
 }
 
 #year {
@@ -80,6 +81,9 @@ div#current_year.year {
 
 .year {
   height: 40px;
+  border-left: 5px solid #B0C4DE;
+  padding-left: 15px;
+  margin-top: 3px
 }
 
 .eff {
