Add user and image

--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -5,6 +5,9 @@
     <p id="caption"></p>
   </div>
   <div id="media-part">
+    <div id="share_link">
+      <a href="/share/<%= @user.share_key %>">/share/<%= @user.share_key %></a>
+    </div>
     <div id="clock"></div>
     <audio autoplay="autoplay" controls autoplay loop class="hidden">
       <source src=<%= "/song.mp3"%> type="audio/mpeg">
