change some gui minor things: favicon..

--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag :jquery_easing %>
 <div class="login-part">
   <div class="eff">
-    <%= image_tag "memories.jpeg", width:640, height:480, id: "key-icon" %>
+    <%= image_tag "memories.png", width:640, height:480, id: "key-icon" %>
     <div class="caption">
       <%= link_to image_tag("login-icon.png"), "/auth/facebook", class: "header" %>
       <p class="content">
