--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -2,7 +2,9 @@
 <div id="rightBar">
   <div id="year"></div>
   <div id="caption-outer">
+    <div id="quotes-left" class="quotes">“</div>
     <p id="caption"></p>
+    <div id="quotes-right" class="quotes">”</div>
   </div>
   <div id="media-part">
     <audio autoplay="autoplay" controls autoplay loop>
