--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,7 +13,7 @@ html, body {
 
 .login-part {
   width: 650px;
-  margin: 100px auto;
+  margin:  auto;
 }
 
 #rightBar {
@@ -34,10 +34,32 @@ html, body {
   border-radius: 5px;
   position: fixed;
   bottom: 100px;
+  position: relative;
+}
 
-  p {
-    font-size: 25px;
-  }
+#caption {
+  font-size: 25px;
+  word-wrap: break-word;
+  padding-left: 15px;
+  margin-bottom: 0px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.quotes {
+  font-family: 'Esteban', cursive;
+  font-size: 50pt;
+  position: absolute
+}
+
+#quotes-left {
+  top: 0px;
+  left: 0px;
+}
+
+#quotes-right {
+  right: 10px;
+  bottom: -30px;
 }
 
 #media-part {
