Remove duplidate javascript

--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -18,3 +18,11 @@
 </div>
 
 <%= javascript_include_tag :timeline %>
+
+<script>
+$(document).ready(function() {
+  app = new TimeLine('');
+  app.displayYearRange();
+  app.fetchNewImage(app.currentYear, app.shuffleImage);
+})
+</script>
