--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -1,9 +1,9 @@
 <div id="leftBar"></div>
 <div id="rightBar">
-  <div id="share_link">
-    <a href="/share/<%= @user.share_key %>">/share/<%= @user.share_key %></a>
-  </div>
   <div id="year"></div>
+  <div id="share_link">
+    <a href="/share/<%= @user.share_key %>">Share yout timeline to facebook</a>
+  </div>
   <div id="caption-outer">
     <div id="quotes-left" class="quotes">“</div>
     <p id="caption"></p>
