--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -106,7 +106,11 @@ div#current_year.year {
   height: 40px;
   border-left: 5px solid #B0C4DE;
   padding-left: 15px;
-  margin-top: 3px
+  margin-top: 3px;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .eff {
