--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -20,7 +20,7 @@ html, body {
   padding: 15px 10px 15px 10px;
   position: fixed;
   top: 100px;
-  right: -10px;
+  right: -115px;
 
   a {
     text-decoration: none;
@@ -29,6 +29,10 @@ html, body {
 }
 
 #share_link:hover {
+  right: -10px;
+}
+
+#share_link:active {
   background: #A9A9A9;
 }
 
@@ -55,7 +59,6 @@ html, body {
   border-radius: 5px;
   position: fixed;
   bottom: 100px;
-  position: relative;
 }
 
 #caption {
@@ -65,22 +68,23 @@ html, body {
   margin-bottom: 0px;
   margin-left: 10px;
   text-align: center;
+  overflow-y: auto;
 }
 
 .quotes {
   font-family: 'Esteban', cursive;
   font-size: 50pt;
-  position: absolute
+  position: fixed;
 }
 
 #quotes-left {
-  top: 0px;
-  left: 0px;
+  bottom: 320px;
+  right: 320px;
 }
 
 #quotes-right {
-  right: 10px;
-  bottom: -30px;
+  right: 45px;
+  bottom: 45px;
 }
 
 #media-part {
