--- a/app/views/home/timeline.html.erb
+++ b/app/views/home/timeline.html.erb
@@ -4,7 +4,7 @@
     <a onclick="postToFeed(); return false;">SHARE</a>
   </div>
   <p id='msg' style="display:none;"></p>
-  <div id="share_key" style="display:none;"><%= @user.share_key %></div>
+  <div id="share_key" style="display:none;"><%= @user.share_key unless @user.nil? %></div>
   <div id="year"></div>
   <div id="caption-outer">
     <div id="quotes-left" class="quotes">“</div>
